--- a/main.tex
+++ b/main.tex
@@ -11,4 +11,8 @@
 
 \section{Introduction}
 
+This is a note created for the book of Carl P. Simon, Lawrence E. Blume - Mathematics for Economists-W. W. Norton and Company (1994). It serves learning and practicing purposes only. Plots, formulas and practice examples are contained in the files.
+
+\subsection{Introductory Models of Consumer Choice}
+The neoclassical mod
 \end{document}
